2009-08-02  Jean Brefort  <jean.brefort@normalesup.org>

	* data/space-groups.txt: updated after group 229 fix.

2009-08-01  Daniel Leidert  <daniel.leidert@wgdd.de>

	* doc/babel.1, doc/obchiral.1: Fixed "mdoc warning: Extraneous .Re".

2009-07-15  Daniel Leidert

	* doc/babel.1: Fixed hyphen used as minus sign.

2009-07-13  Chris Morley

	* src/formats/fingerprintformat.cpp: set initial nbits=0 (default)
	and remove the setting of FP4 as the default fingerprint. 
	(FastsearchFormat remained at FP2.) OBPlugin derived classes have
	a built-in mechanism for setting defaults.
	
2009-07-08  Chris Morley

	* src/transform.cpp(OBMol::ClassDescription) Change description of -p so that GUI 
	takes pH parameter.
	 
2009-07-08  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-java.i: Added support for foreach loops using the
	Iterators.

2009-07-08  Chris Morley

	* windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj,
	OBMoreFormats.vcproj: add outformat, molproformat, vaspformat
	(still not gamessukformat because of need for regex)
	
	* windows-vc2005/babelconfig.h: update version to 2.2.2
	
2009-07-08  Chris Morley
	
	* src/formats/gaussformat.cpp: small change to parsing to prevent
	crash on some files.

2009-07-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/Makefile.am, data/Makefile.in: Only build data headers if
	Perl is present.

	* Change __CYGWIN__ ifdef to also include MINGW.

2009-07-06  Chris Morley

	* src/dlhandler_win32.cpp: omit call to GetModuleHandle and just 
	obtain exe path by calling GetModuleFileName with a zero handle.
	MSVC build works again but a better solution is needed. 

2009-07-05  Tim Vandermeersch

	Make sure there is only one PluginMap for each plugin type. (Fixes
	cygwin builds, all formats  are now shown when running babel
	-H). Also added some cygwin specific code to dlhandler_win32.cpp
	to find the plugin path (..\lib\openbabel\BABEL_VERSION).

2009-07-01  Geoffrey Hutchison  <babel@geoffhutchison.net>
